# nixie-clock

./: LICENSE  README.md  pyproject.toml
nixie_clock/: main.py  shift_register.py
